--- a/netbox_scripts/ganeti_network/interfaces.j2
+++ b/netbox_scripts/ganeti_network/interfaces.j2
@@ -33,13 +33,14 @@ iface private inet static
     up ip addr add {{ primary_ip6 }} dev private
 
 {% for vlan in tagged_vlans %}
-iface {{ vlan.name.split('-')[0].rstrip('1') }} inet manual
+{% set bridge_name = vlan.name.split('-')[0].rstrip('1') %}
+iface {{ bridge_name }} inet manual
     pre-up ip link add name {{ vlan.vid }} link {{ physical_int }} type vlan id {{ vlan.vid }}
     post-down ip link delete dev {{ vlan.vid }} type vlan
     bridge_ports   {{ vlan.vid }}
     bridge_stp     off
     bridge_maxwait 0
     bridge_fd      0
-    up sysctl net.ipv6.conf.{{ vlan.name.split('-')[0].rstrip('1') }}.accept_ra=0
+    up sysctl net.ipv6.conf.{{ bridge_name }}.accept_ra=0
 {% endfor %}
 *******************************************************************************
